--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,7 +106,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Install dependencies
-        run: npm ci --verbose
+        run: npm ci --registry https://registry.npmjs.org --verbose
 
       - name: Build project
         run: npm run build
