--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "keywords": [
     "aws",
     "cdk",
