--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,31 +3,12 @@ name: Deploy Backend Infrastructure CDK
 on:
   push:
     branches:
-      - main
-      - develop
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
-    inputs:
-      prefix:
-        description: 'Resource prefix (leave empty for auto)'
-        required: false
-        type: string
-      environment:
-        description: 'Target environment'
-        required: true
-        default: 'dev'
-        type: choice
-        options:
-          - dev
-          - staging
-          - prod
-
+      - new-stack
 env:
   NODE_VERSION: '20'
   AWS_REGION: ${{ secrets.AWS_REGION }}
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+  PREFIX: new
 
 jobs:
   # CDK diff job for pull requests
@@ -59,14 +40,6 @@ jobs:
 
       - name: Build project
         run: npm run build
-
-      - name: Set environment variables
-        run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ -n "${{ github.event.inputs.prefix }}" ]; then
-            echo "PREFIX=${{ github.event.inputs.prefix }}" >> $GITHUB_ENV
-          else
-            echo "PREFIX=pr-${{ github.event.number }}" >> $GITHUB_ENV
-          fi
 
       - name: CDK Bootstrap (if needed)
         run: npx cdk bootstrap --require-approval never
@@ -111,25 +84,13 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Set environment variables
-        run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ -n "${{ github.event.inputs.prefix }}" ]; then
-            echo "PREFIX=${{ github.event.inputs.prefix }}" >> $GITHUB_ENV
-          elif [ "${{ github.ref }}" = "refs/heads/main" ]; then
-            echo "PREFIX=prod" >> $GITHUB_ENV
-          elif [ "${{ github.ref }}" = "refs/heads/develop" ]; then
-            echo "PREFIX=staging" >> $GITHUB_ENV
-          else
-            echo "PREFIX=dev" >> $GITHUB_ENV
-          fi
-
       - name: CDK Bootstrap
         run: npx cdk bootstrap --require-approval never
         env:
           PREFIX: ${{ env.PREFIX }}
 
-      - name: CDK Deploy
-        run: npx cdk deploy --require-approval never --outputs-file outputs.json
+      - name: CDK Deploy IamDemoStack
+        run: npx cdk deploy ${{ env.PREFIX }}-IamDemoStack --require-approval never --outputs-file outputs.json
         env:
           PREFIX: ${{ env.PREFIX }}
 
